refactor(lnd-grpc-client): rename 'rpchost'/'rpcport' properties to 'host'/'port'